# PEP_Class

./: PEP.ipynb  index.html  style.css
PEP Python/: PEP.py  PEPdata.py  flask0702.py  index.html  index1.html  login.html  signup.html
PEP-Python1/: PEP.py  about.html  contact.html  index2.html
PEP2701/: index.html
PEP2801/: index.html
asciiArt/: AsciiArt.py
package_push/: README.md  pyproject.toml
package_push/mycalculator_akshat2011.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package_push/mycustompackage/: help.py
package_push202/: README.md  pyproject.toml
package_push202/package/: main.py  removespace.py  saint.py
package_push202/string_manipulater_akshat2011.egg-info/: PKG-INFO  SOURCES.txt
