[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycalculator-akshat2011"
version = "0.1.0"
description = "Simple calculator package"
authors = [
  { name="Akshat", email="youremail@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
