[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "string-manipulater-akshat2011"
version = "0.1.1"
description = "Simple string manipulation package"
authors = [
  { name="Akshat", email="youremail@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
